tests/parser_cases/valid/control_flow_nested.ob0
MODULE Main;
VAR x;
BEGIN
  x := 3;
  IF x THEN
    WHILE x DO
      WriteInt(x);
      x := x - 1
    END
  ELSE
    WriteInt(0)
  END
END Main.
