tests/parser_cases/invalid/if_call_condition.ob0
(* INVALID: IF condition contains malformed call syntax with missing ')' *)
MODULE Main;
BEGIN
  IF WriteInt(1 THEN
    WriteInt(2)
  END
END Main.
